styles.css
:root {
  --blue-bg: #8ae9ffff;
  --blue-outline: #248a9cff;
  --white-bg: #ffffff;
  --text-color: #000000;
  --transparent-modal: #0000006b;
  --border-size: 5px;
  --green-main: #77b17b;
  --green-border: #016601;
  --light-blue: #80cbc4;
  --dark-blue: #0d4569;
  --transparent-inactive: #000000bb;
  --red-text: #7c0000;
  --button-color: #8ae9ff;
}

html {
  padding: 0;
  margin: 0;
}

body {
  background-color: var(--white-bg);
  color: var(--text-color);
  padding: 1rem;
  margin: 0;
  width: 95vw;
  font-family: "Mochiy Pop One", sans-serif;
}

.container {
  padding: 0;
  margin: 0;
}

.linear-page {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.liner-page-cont {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.linear-team-container {
  width: 95%;
  height: 15vh;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

/* ------------------------------------------------------------ Utils ------------------------------------------------------------ */
svg {
  width: 100%;
  height: auto;
}

.hideElement {
  display: none;
}

path {
  cursor: pointer;
}

.movable {
  position: absolute;
}

.linear-team-name {
  width: 10%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.linear-team-name h1 {
  padding: 0;
  margin: 0;
  font-size: 1.5rem;
  font-weight: 100;
}

.linear-move-buttons {
  width: 10%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.linear-move-button {
  display: flex;
  align-items: center;
  justify-content: center;
}

.linear-add-button {
  max-width: 8%;
  padding: 1rem;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  text-align: center;
  width: 5%;
}

.linear-avatar {
  width: 10%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.linear-avatar img {
  max-width: 100%;
  max-height: 100%;
}

.liner-avatar-image {
  max-width: 100%;
  max-height: 100%;
  z-index: 1;
  user-select: none;
}

.linear-track {
  width: 70%;
  height: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.linear-block {
  width: 10%;
  height: 100%;
  border: solid var(--border-size) var(--blue-outline);
  border-right: none;
  transform: skew(-15deg);
}

.linear-finish {
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  border-right: solid var(--border-size) var(--blue-outline);
}

.finish-flag {
  width: 100%;
  height: 155%;
}

.linear-add-team {
  width: 10%;
  min-width: 100px;
}

.linear-add-team h1 {
  padding: 0;
  margin: 0;
  font-size: 1rem;
  text-align: center;
}

/* -------------------------------------------------------------- Hex Page -------------------------------------------------------------- */
.hex-page {
  width: 100%;
  height: 95vh;
}

.hex-team-cont {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.hex-track {
  width: 70%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  row-gap: 30px;
  column-gap: 10px;
}

.hex-block {
  position: relative;
}

.hexBoxImageCont {
  /* background-color: #7c0000; */
  z-index: 1;
  width: 100%;
  height: 100%;
  position: absolute;
}

.multi {
  display: grid;
  grid-template-columns: 1fr 1fr;
  row-gap: 30%;
}

.single {
  display: grid;
  grid-template-columns: 1fr;
}

.single img {
  width: 60%;
  transform: translate(40%, -10%);
}

.hex-avatar-movable-cont {
  /* border: solid 1px #06274e; */
  max-width: 100%;
  position: relative;
}

.hex-avatar-movable {
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: 1;
  user-select: none;
  width: 110%;
}

.frist-last-block {
  position: relative;
}

.hex-box-first {
  /* background-color: #7c0000; */
  z-index: 1;
  display: grid;
  grid-template-columns: 100%;
  row-gap: 10%;
  width: 50%;
  height: 100%;
  position: absolute;
  overflow: visible;
}

.hex-box-last {
  /* background-color: #7c0000; */
  z-index: 1;
  display: grid;
  grid-template-columns: 100%;
  row-gap: 10%;
  width: 50%;
  height: 100%;
  position: absolute;
  left: 50%;
  overflow: visible;
}

.left-hex-move .hexBoxImageCont {
  transform: translateX(30%);
}

.right-hex-move .hexBoxImageCont {
  transform: translateX(-30%);
}

.top-hex-move .hexBoxImageCont {
  transform: translateY(25%);
}

.top-hex-move .hex-box-first {
  transform: translateY(25%);
}

.top-hex-move .hex-box-last {
  transform: translateY(25%);
}

.bottom-hex-move .hexBoxImageCont {
  transform: translateY(-30%);
}

.left-hex-move svg {
  transform: translateX(30%);
}

.right-hex-move svg {
  transform: translateX(-30%);
}

.top-hex-move svg {
  transform: translateY(30%);
}

.bottom-hex-move svg {
  transform: translateY(-30%);
}

.controlsCont {
  width: 25%;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.controls {
  width: 100%;
  max-height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  overflow: visible;
}

.hex-control-team {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  margin-bottom: 1rem;
}

.hex-move-buttons {
  width: 30%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.hex-move-button {
  width: 50%;
}

.hex-teamName-cont {
  width: 30%;
}

.hex-teamName-cont h1 {
  padding: 0;
  margin: 0;
  font-size: 1.5rem;
}

.hex-avatar-cont {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  width: 30%;
  text-align: center;
}

.add-button-svg {
  width: 70%;
}

.hex-avatar-cont img {
  width: 100%;
}

.hex-add-team {
  width: 30%;
}

.hex-add-team h1 {
  padding: 0;
  margin: 0;
  font-size: 1rem;
  text-align: center;
}

.del-element {
  cursor: pointer;
  font-size: 1.5rem;
  color: var(--red-text);
  padding-left: 1rem;
}

.won-text {
  position: absolute;
  width: 15%;
  z-index: 2;
  animation: fadeout 5s;
  -webkit-animation: fadeout 5s;
  -moz-animation: fadeout 5s;
  -o-animation: fadeout 5s;
  -ms-animation: fadeout 5s;
}
.hex-won {
  transform: translate(-30%, -100%);
}
.hex-won h1 {
  position: absolute;
  transform: translate(20%, -250%);
}

.linear-won {
  transform: translate(-100%, 10%);
}
.linear-won h1 {
  transform: translate(10%, -175%);
}

.won-text h1 {
  padding: 0;
  margin: 0;
  z-index: 4;
}

@keyframes fadeout {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-moz-keyframes fadeout {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-webkit-keyframes fadeout {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-o-keyframes fadeout {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-ms-keyframes fadeout {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

/* --- Change page --- */
.go-to-page {
  position: absolute;
  width: 5%;
  min-width: 50px;
  z-index: 2;
}

.go-to-linear {
  left: 10px;
  top: 10px;
}

.go-to-hex {
  right: 10px;
  top: 10px;
}

/* ---------- Modal --------- */
.modal-cont {
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100vw;
  height: 100vh;
  background-color: var(--transparent-modal);
}

.modal {
  width: 50%;
  height: 60%;
  background-color: var(--white-bg);
  border-radius: 10px;

  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 1rem;
  z-index: 2;
}

.modal button {
  width: 20%;
  min-width: 100px;
  font-size: 2rem;
  border: solid 2px var(--green-border);
  border-radius: 5px;
  background-color: var(--green-main);
  cursor: pointer;
  margin-top: 1rem;
}

.avatar-cont {
  width: 90%;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  overflow: auto;
}

.image-cover {
  z-index: 1;
  background-color: var(--transparent-inactive);
}

.avatar-cont > div {
  min-width: 100px;
  background-color: var(--light-blue);
  border: 1px solid var(--white-bg);
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  position: relative;
}

.activeImg {
  border: 2px solid var(--dark-blue);
}

.modal-images {
  width: 100%;
}

.uActive {
  position: absolute;
  background-color: var(--transparent-inactive);
  z-index: 5;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: default;
}

.menu-buttons {
  position: fixed;
  right: 20%;
  bottom: 5%;
  z-index: 2;
  display: flex;
  align-items: center;
  justify-content: center;
  transform: translateX(50%);
}

.resetButton {
  font-size: 2rem;
  font-weight: bold;
  background-color: var(--button-color);
  border: solid 2px var(--blue-outline);
  border-radius: 10px;
  width: 7ch;
  margin: 0.5rem;
  cursor: pointer;
}

/* -------------- Confirm ---------------- */
.conformation-modal {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 5;
}

.conformation-modal-bg {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--transparent-modal);
}

.conferm-cont {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  flex-direction: column;
  width: 40%;
  height: 30%;
  background-color: var(--white-bg);
  border-radius: 10px;
}

.confirm-buttons {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
}

.confirm-buttons button {
  width: 5ch;
  font-size: 2rem;
  font-weight: bold;
  border: solid 2px var(--blue-outline);
  background-color: var(--button-color);
  border-radius: 10px;
  margin: 1rem;
  cursor: pointer;
}

@media all and (max-width: 1000px) {
  .hex-team-cont {
    flex-direction: column;
  }
  .hex-track {
    width: 100%;
  }
  .controlsCont {
    width: 100%;
  }
  .hex-add-team {
    width: 15%;
  }
  .modal {
    width: 80%;
    height: 70%;
  }
  .modal h1 {
    font-size: 1.5rem;
  }

  .conferm-cont {
    width: 90%;
    height: 30%;
  }
}

